[gd_scene load_steps=15 format=3 uid="uid://08x3f5ojdhm"]

[ext_resource type="Script" path="res://src/Level.gd" id="1_ljq6u"]
[ext_resource type="Texture2D" uid="uid://w4l34chfm017" path="res://assets/level_backgrounds/sky_background.png" id="2_by046"]
[ext_resource type="Texture2D" uid="uid://dvy5gmp2yd102" path="res://assets/level_backgrounds/bomb_1.png" id="3_nh18q"]
[ext_resource type="Texture2D" uid="uid://bbvctcc5515o4" path="res://assets/level_backgrounds/bomb_2.png" id="4_gs5lg"]
[ext_resource type="Texture2D" uid="uid://dkjfrs3r2fj6l" path="res://assets/level_backgrounds/sidescrolling_forest_2.png" id="5_3abp8"]
[ext_resource type="PackedScene" uid="uid://doa18a13ekdni" path="res://src/player.tscn" id="5_rirw7"]
[ext_resource type="Texture2D" uid="uid://2ut4llab487f" path="res://assets/level_backgrounds/sidescrolling_forest_1.png" id="6_0k76i"]
[ext_resource type="Theme" uid="uid://ben2451hr7117" path="res://assets/theme.tres" id="8_0dkwy"]
[ext_resource type="AudioStream" uid="uid://fd4v7xwxgbhd" path="res://assets/audio/music/flapping_through_the_skies_part_1.ogg" id="9_0arn6"]
[ext_resource type="AudioStream" uid="uid://bp4qe6ijk5yko" path="res://assets/audio/narration/dialogue_6.ogg" id="15_mdlpb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xj6hh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nh18q")
}, {
"duration": 1.0,
"texture": ExtResource("4_gs5lg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8s0kk"]
normal = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2ebs0"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kt5ra"]
font_size = 50
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_ljq6u")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="Sprite2D" parent="ParallaxBackground"]
texture = ExtResource("2_by046")
centered = false

[node name="Bomb" type="AnimatedSprite2D" parent="ParallaxBackground"]
modulate = Color(1, 1, 1, 0)
sprite_frames = SubResource("SpriteFrames_xj6hh")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1920, 0)

[node name="MiddleLayer" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(0, 553)
texture = ExtResource("5_3abp8")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1920, 0)

[node name="FrontLayer" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(0, 716)
texture = ExtResource("6_0k76i")
centered = false

[node name="ObstacleTimer" type="Timer" parent="."]
autostart = true

[node name="TreeTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="TreeParent" type="Node2D" parent="."]
z_index = -200

[node name="Player" parent="." instance=ExtResource("5_rirw7")]
position = Vector2(79, 160)

[node name="WorldBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary"]
shape = SubResource("WorldBoundaryShape2D_8s0kk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_0dkwy")

[node name="Label" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_right = 70.0
offset_bottom = 85.0
text = "test"
label_settings = SubResource("LabelSettings_2ebs0")

[node name="Subtitles" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -176.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 0
text = "The seed flew east, through a forest.
(press [space] to jump) (forest ambience)"
label_settings = SubResource("LabelSettings_kt5ra")
horizontal_alignment = 1
autowrap_mode = 2

[node name="SceneEnd" type="ColorRect" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Sounds" type="AudioStreamPlayer" parent="."]
bus = &"Sounds"

[node name="Sounds2" type="AudioStreamPlayer" parent="."]
bus = &"Sounds"

[node name="Sounds3" type="AudioStreamPlayer" parent="."]
bus = &"Sounds"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0arn6")
volume_db = -18.0
autoplay = true
bus = &"Music"

[node name="Narration" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_mdlpb")
volume_db = 12.0
autoplay = true
bus = &"Narration"

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="timeout" from="TreeTimer" to="." method="_on_tree_timer_timeout"]
